Add fields to tickets

--- a/static/css/temba-components.css
+++ b/static/css/temba-components.css
@@ -23,6 +23,7 @@ html {
 
   --select-input-height: inherit;
 
+  --disabled-opacity: 0.6;
   --curvature: 6px;
   --curvature-widget: 6px;
   --color-focus: #a4cafe;
