Add nicer ticket assignment using temba-contact-tickets component

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -299,7 +299,9 @@
       %temba-store(
         completion="/mr/docs/{{ LANGUAGE_CODE }}/editor.json"
         fields="/api/v2/fields.json"
-        globals="/api/v2/globals.json")
+        globals="/api/v2/globals.json"
+        users="/api/v2/users.json"
+      )
 
   .flex.flex-col.h-full
 
