--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -716,6 +716,7 @@
       globals="/api/v2/globals.json"
       groups="/api/v2/groups.json"
       workspace="/api/v2/workspace.json"
+      users="/api/v2/users.json"
     )
   -else
     %temba-store
