--- a/templates/contacts/contact_read_spa.haml
+++ b/templates/contacts/contact_read_spa.haml
@@ -142,7 +142,7 @@
 
     %temba-tab(icon="icon.tickets" name='{{_("Tickets")|escapejs}}')    
       .flex.flex-grow.flex-col.overflow-y-auto(style="border-top-right-radius: var(--curvature);")
-        %temba-contact-tickets.m-4(contact="{{object.uuid}}" -temba-refreshed="handleTicketsRefreshed" clickable="true" -temba-button-clicked="handleTicketClicked")
+        %temba-contact-tickets.m-4(agent="{{user.email}}" contact="{{object.uuid}}" -temba-refreshed="handleTicketsRefreshed" clickable="true" -temba-button-clicked="handleTicketClicked")
           .no-tickets.p-16.text-center(slot="empty")
             .text-xl.mb-4
               -trans "No Tickets"
