--- a/templates/triggers/trigger_list_spa.haml
+++ b/templates/triggers/trigger_list_spa.haml
@@ -3,7 +3,7 @@
 
 -block content
 
-  %form#search-form.mb-4(method="get")
+  %form#search-form.mb-4(method="get" action="{{request.path}}")
     %temba-textinput(type='text' placeholder='{% trans "Search" %}' name="search" value="{{search}}")
     -if request.REQUEST.status
       %input(type='hidden' name='status' value='{{request.REQUEST.status}}')
