- added if item.type === 'js' to handleContentMenuSelected fn that handles the execution of the item.on_click fn - indented functions inside of their if/endifs

--- a/templates/spa_page_menu.haml
+++ b/templates/spa_page_menu.haml
@@ -42,6 +42,13 @@
       posterize(item.url);
     }
 
+    if (item.type === 'js'){
+      if(item.on_click && item.on_click.length > 0){
+        var onClick = Function(item.on_click);
+        onClick();
+      }
+    }
+
     // items need to be refreshed in the top left sidebar menu
     refreshMenu();
   }
