--- a/templates/spa_page_menu.haml
+++ b/templates/spa_page_menu.haml
@@ -11,10 +11,10 @@
     
     if (item.type === 'link') {
       var contentMenu = document.querySelector("temba-content-menu");
-      if(contentMenu.legacy){        
+      if (contentMenu.legacy) {        
         gotoURL_legacy(event);
       }
-      else{
+      else {
         if (click) {
           click.preventDefault();
           click.stopPropagation();   
@@ -27,8 +27,7 @@
         fetchURL(item.url);
       }
     }
-  
-    if (item.type == 'modax') {
+    else if (item.type === 'modax') {
       var modaxOptions = {
         disabled: item.disabled,
         onSubmit: item.on_submit,
@@ -37,13 +36,11 @@
       }
       showModax(item.title, item.url, modaxOptions);
     }
-
-    if (item.type === 'url_post') {
+    else if (item.type === 'url_post') {
       posterize(item.url);
     }
-
-    if (item.type === 'js'){
-      if(item.on_click && item.on_click.length > 0){
+    else if (item.type === 'js') {
+      if (item.on_click && item.on_click.length > 0) {
         var onClick = Function(item.on_click);
         onClick();
       }
@@ -62,7 +59,7 @@
     var href = item.url;
 
     if (href) {
-      if (event.metaKey){
+      if (event.metaKey) {
         window.open(href,'_blank')
       } else {
         window.location = href;
