Tighten up animations

--- a/templates/contacts/contact_stopped_spa.haml
+++ b/templates/contacts/contact_stopped_spa.haml
@@ -2,5 +2,5 @@
 -load i18n
 
 -block subtitle
-  .text-base.mb-6
+  .text-base
     -trans "These contacts have opted out and you can no longer send them messages, but inbound messages will unstop them. They have also been removed from all groups."
