--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -243,6 +243,11 @@
       margin-left: 0 !important;
       margin-right: 0 !important;
     }
+
+    .servicing:hover .hover{
+      background: rgba(0,0,0,.2);
+
+    }
 }
 
 -block full-page-script
@@ -507,6 +512,7 @@
 
       var menu = document.querySelector("temba-menu");
       var items = event.detail;
+
       var item = items.item;
       var parent = items.parent;
       var selection = items.selection;
@@ -536,6 +542,7 @@
       if (parent && parent.id == "workspace") {
         if (item.id == "settings") {
           fetchURL("{% url 'orgs.org_workspace' %}");
+          document.querySelector("temba-menu").click();
         } else if (item.posterize) {
           posterize(item.href)
         }
@@ -714,13 +721,14 @@
     .flex.widget-container(style="height:100vh;overflow:hidden")
       -if request.user.is_staff
         -if user_org and user_org not in user_orgs
-          .servicing.absolute.m-4(style="z-index:999999;right:0;bottom:0")
-            .flex.items-center.bg-secondary.text-white.text-lg.rounded(style="opacity:1;padding:0em 1em;")
-              .flex-grow
-              %temba-icon(style="color:#fff" name="icon.tickets")
-              .ml-1
-                {{user_org.name}}
-              .flex-grow
+          .servicing.absolute.bg-secondary.my-2.mr-20.rounded.shadow-xl(style="z-index:999999;right:0;bottom:0;")
+            %a.posterize.relative(href="{% url 'orgs.org_service' %}" style="text-decoration:none")
+              .flex.items-center.text-white.text-lg.hover.rounded(style="opacity:1;padding:0em 0.5em;")
+                .flex-grow
+                %temba-icon(style="color:#fff" name="icon.service")
+                .ml-2
+                  {{user_org.name}}
+                .flex-grow
 
       .folders
         %temba-menu#nav(class="{% if servicing %}{% endif%}" style="height:100%" endpoint="{% url 'orgs.org_menu' %}" onchange="handleMenuChanged(event)" -temba-button-clicked="handleMenuClicked(event)" -temba-ready="handleMenuReady")
