--- a/templates/orgs/user_two_factor_enable.haml
+++ b/templates/orgs/user_two_factor_enable.haml
@@ -23,7 +23,7 @@
 -block form-buttons
   .mt-6
     %input.button-primary(type="submit" value='{{ submit_button_name }}')
-    %a.button-light.float-right(href="{% url 'orgs.org_home' %}")
+    %a.button-light.float-right(href="{% url 'orgs.org_workspace' %}")
       -trans "Cancel"
 
 -block extra-script
