--- a/templates/public/public_welcome.haml
+++ b/templates/public/public_welcome.haml
@@ -126,7 +126,7 @@
       .icon-user.relative.text-gray-100(style="font-size:190px; transform: rotate(-5deg) translate(-100px, 20px);")
       .-mt-8.mx-20
         .title
-          %a(href="{% url 'orgs.org_home' %}")
+          %a(href="{% url 'orgs.org_workspace' %}")
             -trans "Workspace"
   
         -block account-blurb
