--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -659,6 +659,10 @@
               // remove jquery use here
               $(content).html(response.body);
 
+              if (response.redirected) {
+                addToHistory(response.url);
+              }
+
               hideLoading(response);
             });
 
